plan trip changes

--- a/project.html
+++ b/project.html
@@ -82,11 +82,20 @@
     <p>Plan & Go helps you create personalized travel itineraries, track expenses, check weather forecasts, 
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
-    <div class="features">
+    <!-- <div class="features">
       <div class="card">💰 Track Expenses</div>
       <div class="card">☀ Get Weather Updates</div>
-      <div class="card">🤝 Share Trips</div>
-    </div>
+      <div class="card">🤝 Share Experience</div>
+    </div> -->
+    <div class="features">
+  <div class="card">💰 Track Expenses</div>
+  <div class="card">☀ Get Weather Updates</div>
+  <div class="card" id="shareExperienceBtn">🤝 Share Experience</div>
+</div>
+
+
+
+
   </section>
 
   <!-- Suggested Trips -->
