Designed Back to Home Button

--- a/trip-schedule.html
+++ b/trip-schedule.html
@@ -89,21 +89,22 @@
       font-family: 'Montserrat', 'Poppins', sans-serif;
     }
     .back-btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 22px;
-      background: var(--accent);
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-weight: 600;
-      font-family: 'Montserrat', 'Poppins', sans-serif;
-      box-shadow: 0 2px 8px rgba(74,144,226,0.10);
-      transition: background 0.2s;
+        background: #2A7B9B;
+  color: white;
+  border: none;
+  padding: 14px 28px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  transition: 0.3s;
+  text-decoration: none;
     }
     .back-btn:hover {
-      background: #357ABD;
+        background: #055e85;
+  transform: translateY(-2px);
     }
     @media (max-width: 600px) {
       .container {
